--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.12",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4"
   },
   "scripts": {
