Setting formatters config files

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
   "rules": {},
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
   ],
   "plugins": [
     "react"
